--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,6 +122,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
+allow 2407:3640:2255:3978::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -347,6 +348,7 @@ allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -714,10 +716,15 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:8605:d341:b954:fc51;
+allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
+allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
+allow 2a0f:e586:f:f:a060:ebda:49aa:b011;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
