--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.172.84.107;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -555,6 +556,7 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -572,7 +574,6 @@ allow 192.210.160.35;
 allow 192.210.214.10;
 allow 192.210.255.47;
 allow 192.3.141.157;
-allow 192.3.173.79;
 allow 192.3.228.229;
 allow 192.3.241.151;
 allow 192.42.116.13;
@@ -1253,6 +1254,7 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1293,6 +1295,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1687,6 +1690,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1697,7 +1701,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1879,6 +1882,7 @@ allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.246.98.159;
+allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
@@ -1959,6 +1963,8 @@ allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.128;
+allow 93.99.104.18;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
