--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -81,7 +81,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -645,11 +644,16 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.218.118.133;
+set_real_ip_from 193.218.118.153;
+set_real_ip_from 193.218.118.157;
 set_real_ip_from 193.218.118.160;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
+set_real_ip_from 193.218.118.56;
+set_real_ip_from 193.218.118.72;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
@@ -1080,7 +1084,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1624,10 +1627,15 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a0f:e586:f:f::188;
+set_real_ip_from 2a0f:e586:f:f:8605:d341:b954:fc51;
+set_real_ip_from 2a0f:e586:f:f:9405:a52b:796f:aff2;
+set_real_ip_from 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
+set_real_ip_from 2a0f:e586:f:f:a060:ebda:49aa:b011;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1715,6 +1723,7 @@ set_real_ip_from 45.137.99.10;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.152;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1756,7 +1765,6 @@ set_real_ip_from 45.159.250.144;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
-set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
@@ -1791,6 +1799,7 @@ set_real_ip_from 45.84.107.55;
 set_real_ip_from 45.84.107.74;
 set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.84.107.97;
+set_real_ip_from 45.88.186.86;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.100;
 set_real_ip_from 45.9.156.101;
