--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -573,6 +573,7 @@ allow 192.210.160.35;
 allow 192.210.214.10;
 allow 192.210.255.47;
 allow 192.3.141.157;
+allow 192.3.173.79;
 allow 192.3.228.229;
 allow 192.3.241.151;
 allow 192.42.116.13;
@@ -1257,6 +1258,7 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
+allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1974,6 +1976,8 @@ allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
+allow 93.99.104.194;
+allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
