--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -573,6 +573,7 @@ set_real_ip_from 192.210.160.35;
 set_real_ip_from 192.210.214.10;
 set_real_ip_from 192.210.255.47;
 set_real_ip_from 192.3.141.157;
+set_real_ip_from 192.3.173.79;
 set_real_ip_from 192.3.228.229;
 set_real_ip_from 192.3.241.151;
 set_real_ip_from 192.42.116.13;
@@ -1257,6 +1258,7 @@ set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
+set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -1974,6 +1976,8 @@ set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
+set_real_ip_from 93.99.104.194;
+set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
