--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -573,6 +573,7 @@ set_real_ip_from 192.210.160.35;
 set_real_ip_from 192.210.214.10;
 set_real_ip_from 192.210.255.47;
 set_real_ip_from 192.3.141.157;
+set_real_ip_from 192.3.173.79;
 set_real_ip_from 192.3.228.229;
 set_real_ip_from 192.3.241.151;
 set_real_ip_from 192.42.116.13;
@@ -1190,6 +1191,8 @@ set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
+set_real_ip_from 93.99.104.194;
+set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
