--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -359,7 +359,6 @@ allow 2a02:4780:c:b915::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
-allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -556,6 +555,7 @@ allow 2a0b:f4c2:2::35;
 allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
+allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
@@ -565,19 +565,23 @@ allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
+allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
+allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
 allow 2a0b:f4c2:2::53;
 allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
+allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
+allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
@@ -774,4 +778,3 @@ allow 2a12:a800:9:1:193:26:115:161;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
-allow 2c0f:6c0:0:4::95ea;
