--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -359,7 +359,6 @@ deny 2a02:4780:c:b915::1;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
-deny 2a02:c206:2240:8448::1;
 deny 2a02:c206:2241:2588::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -556,6 +555,7 @@ deny 2a0b:f4c2:2::35;
 deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
+deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
@@ -565,19 +565,23 @@ deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
+deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
+deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
 deny 2a0b:f4c2:2::53;
 deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
+deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
+deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
@@ -774,4 +778,3 @@ deny 2a12:a800:9:1:193:26:115:161;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:3::479d;
-deny 2c0f:6c0:0:4::95ea;
