--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -2,7 +2,6 @@ set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.211.56.102;
-set_real_ip_from 102.211.56.105;
 set_real_ip_from 102.211.56.12;
 set_real_ip_from 102.211.56.13;
 set_real_ip_from 102.211.56.250;
@@ -432,6 +431,7 @@ set_real_ip_from 185.220.101.35;
 set_real_ip_from 185.220.101.36;
 set_real_ip_from 185.220.101.37;
 set_real_ip_from 185.220.101.38;
+set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
 set_real_ip_from 185.220.101.41;
@@ -441,19 +441,23 @@ set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
 set_real_ip_from 185.220.101.46;
 set_real_ip_from 185.220.101.47;
+set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
+set_real_ip_from 185.220.101.50;
 set_real_ip_from 185.220.101.51;
 set_real_ip_from 185.220.101.52;
 set_real_ip_from 185.220.101.53;
 set_real_ip_from 185.220.101.54;
 set_real_ip_from 185.220.101.55;
 set_real_ip_from 185.220.101.56;
+set_real_ip_from 185.220.101.57;
 set_real_ip_from 185.220.101.58;
 set_real_ip_from 185.220.101.59;
 set_real_ip_from 185.220.101.6;
 set_real_ip_from 185.220.101.60;
 set_real_ip_from 185.220.101.61;
+set_real_ip_from 185.220.101.62;
 set_real_ip_from 185.220.101.63;
 set_real_ip_from 185.220.101.64;
 set_real_ip_from 185.220.101.65;
@@ -656,7 +660,6 @@ set_real_ip_from 193.36.132.21;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
-set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.77;
@@ -1263,7 +1266,6 @@ set_real_ip_from 2a02:4780:c:b915::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
-set_real_ip_from 2a02:c206:2240:8448::1;
 set_real_ip_from 2a02:c206:2241:2588::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1460,6 +1462,7 @@ set_real_ip_from 2a0b:f4c2:2::35;
 set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
+set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
@@ -1469,19 +1472,23 @@ set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
+set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
+set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
 set_real_ip_from 2a0b:f4c2:2::53;
 set_real_ip_from 2a0b:f4c2:2::54;
 set_real_ip_from 2a0b:f4c2:2::55;
 set_real_ip_from 2a0b:f4c2:2::56;
+set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
+set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
@@ -1678,7 +1685,6 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:161;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:3::479d;
-set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
