Update lists at 20250419-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 114.35.245.150;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
+allow 121.78.28.166;
 allow 123.253.35.32;
 allow 123.58.200.119;
 allow 125.212.241.131;
@@ -167,7 +168,6 @@ allow 154.41.95.1;
 allow 156.229.226.6;
 allow 158.220.123.219;
 allow 158.69.252.116;
-allow 159.65.16.53;
 allow 160.119.249.240;
 allow 161.129.68.162;
 allow 162.210.173.17;
@@ -253,21 +253,16 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.73.189.33;
 allow 180.150.226.99;
 allow 184.75.223.211;
 allow 185.100.85.132;
-allow 185.100.85.22;
-allow 185.100.85.23;
 allow 185.100.85.24;
 allow 185.100.85.25;
 allow 185.100.87.136;
-allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.192;
 allow 185.100.87.250;
-allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
@@ -1321,6 +1316,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1335,10 +1331,6 @@ allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:12::4;
-allow 2a06:1700:0:15::1;
-allow 2a06:1700:0:15::2;
-allow 2a06:1700:0:15::3;
-allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -1684,6 +1676,7 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1694,7 +1687,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1878,7 +1870,6 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.100.235.29;
-allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1896,6 +1887,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
