--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -120,6 +120,7 @@ set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
+set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 123.58.200.119;
 set_real_ip_from 125.212.241.131;
@@ -167,7 +168,6 @@ set_real_ip_from 154.41.95.1;
 set_real_ip_from 156.229.226.6;
 set_real_ip_from 158.220.123.219;
 set_real_ip_from 158.69.252.116;
-set_real_ip_from 159.65.16.53;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
 set_real_ip_from 162.210.173.17;
@@ -253,21 +253,16 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
-set_real_ip_from 179.73.189.33;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.75.223.211;
 set_real_ip_from 185.100.85.132;
-set_real_ip_from 185.100.85.22;
-set_real_ip_from 185.100.85.23;
 set_real_ip_from 185.100.85.24;
 set_real_ip_from 185.100.85.25;
 set_real_ip_from 185.100.87.136;
-set_real_ip_from 185.100.87.139;
 set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
-set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
@@ -1321,6 +1316,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1335,10 +1331,6 @@ set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
 set_real_ip_from 2a06:1700:0:12::4;
-set_real_ip_from 2a06:1700:0:15::1;
-set_real_ip_from 2a06:1700:0:15::2;
-set_real_ip_from 2a06:1700:0:15::3;
-set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
@@ -1684,6 +1676,7 @@ set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1694,7 +1687,6 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1878,7 +1870,6 @@ set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.96;
 set_real_ip_from 79.100.235.29;
-set_real_ip_from 79.127.129.160;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
@@ -1896,6 +1887,7 @@ set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
