Update lists at 20250419-0600

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -407,6 +407,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:105:d7eb::1;
+deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -449,6 +450,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -733,6 +735,7 @@ deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:185:241:208:92;
 deny 2a12:a800:2:1:45:138:16:107;
 deny 2a12:a800:2:1:45:138:16:113;
+deny 2a12:a800:2:1:45:138:16:164;
 deny 2a12:a800:2:1:45:138:16:178;
 deny 2a12:a800:2:1:45:138:16:222;
 deny 2a12:a800:2:1:45:138:16:230;
@@ -771,3 +774,4 @@ deny 2a12:a800:9:1:193:26:115:161;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:3::479d;
+deny 2c0f:6c0:0:4::95ea;
