Update lists at 20250419-0901

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -650,6 +650,7 @@ deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
+deny 193.23.218.10;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.161;
@@ -1574,6 +1575,7 @@ deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:d940:11:cb::2;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
