--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -650,6 +650,7 @@ set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
+set_real_ip_from 193.23.218.10;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.161;
