Update lists at 20250420-0901

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -110,6 +110,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2406:ef80:4:2881::ccd5:a26;
 allow 2407:3640:2207:8882::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
