Update lists at 20250421-1501

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -100,8 +100,6 @@ deny 108.59.12.3;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
-deny 109.172.84.107;
-deny 109.228.160.190;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -215,6 +213,7 @@ deny 172.81.135.157;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -513,6 +512,7 @@ deny 185.246.189.140;
 deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
+deny 185.247.184.33;
 deny 185.247.226.175;
 deny 185.252.232.218;
 deny 185.254.196.141;
@@ -1287,7 +1287,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1297,6 +1296,7 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:9dc0:31::c0cc:4d;
+deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
@@ -1334,6 +1334,7 @@ deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1791,7 +1792,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
