Update lists at 20250421-2100

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -13,6 +13,7 @@ deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
+deny 2001:41d0:701:1100::57d3;
 deny 2001:41d0:701:1100::912e;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
@@ -392,7 +393,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
