--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -80,6 +80,7 @@ allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
+allow 107.189.5.188;
 allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
@@ -134,6 +135,7 @@ allow 135.125.239.70;
 allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 138.68.135.36;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.164.38.67;
@@ -711,6 +713,7 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -962,7 +965,6 @@ allow 23.191.200.15;
 allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
-allow 23.191.200.19;
 allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
@@ -1287,7 +1289,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1736,7 +1737,6 @@ allow 45.66.35.32;
 allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
-allow 45.76.89.254;
 allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
@@ -1792,7 +1792,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.110.29;
@@ -1854,6 +1853,7 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.100.235.29;
+allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
