--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -13,6 +13,7 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -392,7 +393,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
