Update lists at 20250422-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -171,14 +171,17 @@ allow 160.119.249.240;
 allow 161.129.68.162;
 allow 162.210.173.17;
 allow 162.216.18.62;
+allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
+allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
 allow 162.247.74.27;
+allow 162.247.74.7;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -1525,6 +1528,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
@@ -1657,7 +1661,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1668,6 +1671,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1719,7 +1723,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
-allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1732,6 +1735,7 @@ allow 45.66.35.32;
 allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
+allow 45.76.89.254;
 allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
@@ -1873,6 +1877,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
+allow 85.239.41.130;
 allow 85.90.196.46;
 allow 85.93.218.204;
 allow 86.54.28.49;
