Update lists at 20250425-1200

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,7 +101,6 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -392,6 +391,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -635,6 +635,8 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:62f9::1;
+allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -654,8 +656,10 @@ allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
+allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
+allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
@@ -668,7 +672,7 @@ allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
-allow 2a0e:bfc0:0:d::d927;
+allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
@@ -730,7 +734,6 @@ allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
-allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
@@ -750,7 +753,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:161;
 allow 2a12:a800:9:1:193:26:115:212;
