--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,7 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
-allow 102.211.56.102;
 allow 102.211.56.105;
 allow 102.211.56.12;
 allow 102.211.56.13;
@@ -100,7 +99,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.172.84.107;
 allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -118,7 +116,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.160.135;
+allow 1.170.213.92;
 allow 118.0.154.219;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -187,7 +185,6 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.154.100.204;
-allow 165.227.138.223;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.20;
@@ -210,7 +207,6 @@ allow 172.245.251.232;
 allow 172.245.33.159;
 allow 172.81.131.110;
 allow 172.81.131.111;
-allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
@@ -221,6 +217,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.3;
 allow 176.65.149.100;
+allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
@@ -253,7 +250,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.55.70.86;
 allow 180.150.226.99;
 allow 184.75.221.43;
 allow 185.100.85.132;
@@ -281,6 +277,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.43;
 allow 185.130.47.58;
+allow 185.132.53.6;
 allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
@@ -522,9 +519,12 @@ allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
+allow 185.40.4.121;
+allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
+allow 185.40.4.20;
 allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
@@ -642,7 +642,6 @@ allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.56.135.103;
 allow 194.15.112.133;
-allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.77;
@@ -983,7 +982,6 @@ allow 23.191.200.9;
 allow 23.236.122.193;
 allow 23.94.211.25;
 allow 23.94.36.167;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -1281,6 +1279,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1524,6 +1523,8 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:62f9::1;
+allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1543,8 +1544,10 @@ allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
+allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
+allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1557,7 +1560,7 @@ allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
-allow 2a0e:bfc0:0:d::d927;
+allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
@@ -1619,7 +1622,6 @@ allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
-allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
@@ -1639,7 +1641,6 @@ allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:161;
 allow 2a12:a800:9:1:193:26:115:212;
@@ -1672,8 +1673,11 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.232.234;
 allow 45.137.99.10;
+allow 45.137.99.144;
 allow 45.137.99.216;
+allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1693,7 +1697,6 @@ allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
-allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1732,7 +1735,6 @@ allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.80.158.36;
-allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.84.107.101;
@@ -1752,8 +1754,8 @@ allow 45.84.107.97;
 allow 45.9.148.50;
 allow 45.9.156.100;
 allow 45.9.156.101;
+allow 45.9.168.103;
 allow 45.9.168.108;
-allow 45.9.168.22;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1761,6 +1763,7 @@ allow 45.95.169.130;
 allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.255;
+allow 46.101.176.172;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
@@ -1780,6 +1783,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
