--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,7 +1,6 @@
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
-set_real_ip_from 102.211.56.102;
 set_real_ip_from 102.211.56.105;
 set_real_ip_from 102.211.56.12;
 set_real_ip_from 102.211.56.13;
@@ -100,7 +99,6 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.172.84.107;
 set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -118,7 +116,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.160.135;
+set_real_ip_from 1.170.213.92;
 set_real_ip_from 118.0.154.219;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
@@ -187,7 +185,6 @@ set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.154.100.204;
-set_real_ip_from 165.227.138.223;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
@@ -210,7 +207,6 @@ set_real_ip_from 172.245.251.232;
 set_real_ip_from 172.245.33.159;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
-set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
@@ -221,6 +217,7 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.100;
+set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
@@ -253,7 +250,6 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
-set_real_ip_from 179.55.70.86;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.75.221.43;
 set_real_ip_from 185.100.85.132;
@@ -281,6 +277,7 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.132.53.6;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.150.28.13;
@@ -522,9 +519,12 @@ set_real_ip_from 185.38.175.133;
 set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
+set_real_ip_from 185.40.4.121;
+set_real_ip_from 185.40.4.127;
 set_real_ip_from 185.40.4.132;
 set_real_ip_from 185.40.4.149;
 set_real_ip_from 185.40.4.150;
+set_real_ip_from 185.40.4.20;
 set_real_ip_from 185.40.4.22;
 set_real_ip_from 185.40.4.29;
 set_real_ip_from 185.40.4.38;
@@ -642,7 +642,6 @@ set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
 set_real_ip_from 193.56.135.103;
 set_real_ip_from 194.15.112.133;
-set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
@@ -983,7 +982,6 @@ set_real_ip_from 23.191.200.9;
 set_real_ip_from 23.236.122.193;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.167;
-set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
 set_real_ip_from 2400:8907::f03c:95ff:fe79:8c79;
@@ -1281,6 +1279,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1524,6 +1523,8 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
+set_real_ip_from 2a0d:8140:1fff:62f9::1;
+set_real_ip_from 2a0d:8140:1fff:fe40::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1543,8 +1544,10 @@ set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:149;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:20;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:22;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1557,7 +1560,7 @@ set_real_ip_from 2a0e:bfc0:0:13::67bc;
 set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc0:0:8::a84e;
-set_real_ip_from 2a0e:bfc0:0:d::d927;
+set_real_ip_from 2a0e:bfc2:0:24::3456;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7:0:4::6e7a;
 set_real_ip_from 2a0e:e701:1198::1;
@@ -1619,7 +1622,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
-set_real_ip_from 2a12:a800:2:1:45:141:215:133;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
@@ -1639,7 +1641,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:205;
 set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
-set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:161;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
@@ -1672,8 +1673,11 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.232.234;
 set_real_ip_from 45.137.99.10;
+set_real_ip_from 45.137.99.144;
 set_real_ip_from 45.137.99.216;
+set_real_ip_from 45.137.99.98;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.164;
@@ -1693,7 +1697,6 @@ set_real_ip_from 45.139.50.204;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
-set_real_ip_from 45.141.215.133;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
@@ -1732,7 +1735,6 @@ set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.23;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.36;
-set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.84.107.101;
@@ -1752,8 +1754,8 @@ set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.100;
 set_real_ip_from 45.9.156.101;
+set_real_ip_from 45.9.168.103;
 set_real_ip_from 45.9.168.108;
-set_real_ip_from 45.9.168.22;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
@@ -1761,6 +1763,7 @@ set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.14;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
+set_real_ip_from 46.101.176.172;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
@@ -1780,6 +1783,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
