--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.28.144;
+allow 1.170.211.230;
 allow 118.0.154.219;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -142,7 +142,6 @@ allow 139.99.8.57;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
-allow 142.202.240.72;
 allow 142.44.133.81;
 allow 144.172.118.4;
 allow 144.172.118.41;
@@ -232,6 +231,7 @@ allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
+allow 178.175.148.236;
 allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -273,6 +273,7 @@ allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.112.146.168;
 allow 185.113.128.30;
+allow 185.113.8.186;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.129;
@@ -1213,6 +1214,7 @@ allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
+allow 2a00:1dc0:caff:68::9db3;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
@@ -1227,6 +1229,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e5c0:430d::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1278,7 +1281,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1286,7 +1288,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1653,6 +1654,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1663,7 +1665,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1674,7 +1675,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.232.234;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
@@ -1766,7 +1766,6 @@ allow 45.95.169.130;
 allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.255;
-allow 46.101.176.172;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
@@ -1785,7 +1784,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1824,6 +1822,7 @@ allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
 allow 62.182.84.146;
+allow 62.60.245.40;
 allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
@@ -1837,6 +1836,7 @@ allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
+allow 68.183.70.247;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.18.215.82;
@@ -1867,7 +1867,6 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
