--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -117,7 +117,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.28.144;
+deny 1.170.211.230;
 deny 118.0.154.219;
 deny 118.163.74.160;
 deny 118.193.64.139;
@@ -142,7 +142,6 @@ deny 139.99.8.57;
 deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.171.12.88;
-deny 142.202.240.72;
 deny 142.44.133.81;
 deny 144.172.118.4;
 deny 144.172.118.41;
@@ -232,6 +231,7 @@ deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.148.209;
+deny 178.175.148.236;
 deny 178.175.148.246;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -273,6 +273,7 @@ deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.112.146.168;
 deny 185.113.128.30;
+deny 185.113.8.186;
 deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.129.61.129;
@@ -1213,6 +1214,7 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
+deny 2a00:1dc0:caff:68::9db3;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
@@ -1227,6 +1229,7 @@ deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
+deny 2a01:e5c0:430d::2;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
@@ -1278,7 +1281,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1286,7 +1288,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1653,6 +1654,7 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1663,7 +1665,6 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1674,7 +1675,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.135.232.234;
 deny 45.137.99.10;
 deny 45.137.99.144;
 deny 45.137.99.216;
@@ -1766,7 +1766,6 @@ deny 45.95.169.130;
 deny 45.95.169.14;
 deny 45.95.169.230;
 deny 45.95.169.255;
-deny 46.101.176.172;
 deny 46.165.243.36;
 deny 46.182.21.248;
 deny 46.23.109.25;
@@ -1785,7 +1784,6 @@ deny 51.81.222.62;
 deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1824,6 +1822,7 @@ deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
 deny 62.182.84.146;
+deny 62.60.245.40;
 deny 64.190.76.10;
 deny 64.190.76.11;
 deny 64.190.76.12;
@@ -1837,6 +1836,7 @@ deny 66.220.242.222;
 deny 66.78.40.182;
 deny 66.78.40.73;
 deny 67.219.109.141;
+deny 68.183.70.247;
 deny 71.19.144.106;
 deny 72.14.179.10;
 deny 72.18.215.82;
@@ -1867,7 +1867,6 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
