--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -324,6 +324,7 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
+deny 2a00:1dc0:caff:68::9db3;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
@@ -338,6 +339,7 @@ deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
+deny 2a01:e5c0:430d::2;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
@@ -389,7 +391,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -397,7 +398,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
