--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -116,7 +116,6 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.179.121;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -1227,7 +1226,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a01:e5c0:430d::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
@@ -1286,6 +1284,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1651,7 +1650,6 @@ set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1662,6 +1660,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1672,6 +1671,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.232.234;
 set_real_ip_from 45.137.99.10;
 set_real_ip_from 45.137.99.144;
 set_real_ip_from 45.137.99.216;
@@ -1819,7 +1819,6 @@ set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 62.60.245.40;
 set_real_ip_from 64.190.76.10;
 set_real_ip_from 64.190.76.11;
 set_real_ip_from 64.190.76.12;
@@ -1864,6 +1863,7 @@ set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
@@ -1938,7 +1938,6 @@ set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
-set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
